--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -58,6 +58,8 @@ jobs:
         cd openwrt/package
         git clone https://github.com/jerrykuku/luci-theme-argon.git
         git clone https://github.com/jerrykuku/luci-app-argon-config.git
+        git clone https://github.com/chxsamidare/openwrt-package-webd.git
+        git clone  https://github.com/gdy666/luci-app-lucky.git
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
